<resources>
    <string name="app_name">EasyPay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="Username">Mobile Number</string>
    <string name="Register">Register</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Register  Here</string>
</resources>